--- a/index.html
+++ b/index.html
@@ -409,9 +409,9 @@
     </footer>
 
     <!-- Back to Top Button -->
-    <a href="#" id="back-to-top" class="back-to-top bg-indigo-600 text-white w-12 h-12 rounded-full flex items-center justify-center shadow-lg hover:bg-indigo-700 transition duration-300">
+<!--     <a href="#" id="back-to-top" class="back-to-top bg-indigo-600 text-white w-12 h-12 rounded-full flex items-center justify-center shadow-lg hover:bg-indigo-700 transition duration-300">
         <i class="fas fa-arrow-up"></i>
-    </a>
+    </a> -->
 
  <div class="fixed-contact-buttons flex flex-col space-y-3">
     <!-- Phone Button (No Shadow) -->
