--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="font-sans bg-gray-50 text-gray-800">
     <!-- Header/Navbar -->
-    <header class="sticky top-0 z-40 bg-white shadow-md">
+    <header class="sticky top-0 z-40 bg-white shadow-md ">
         <div class="container mx-auto px-4 py-3">
             <div class="flex justify-between items-center">
                 <!-- Logo -->
@@ -27,7 +27,7 @@
                     <a href="#contact" class="nav-link px-3 py-2 font-medium">Contact</a>
                     <!-- Theme Toggle -->
                     <div class="flex items-center">
-                        <span class="mr-2 text-sm font-medium"><b>Light</b></span>
+                        <span class="mr-2 text-sm font-medium"><b>Light</b>></span>
                         <div class="relative inline-block w-12 mr-2 align-middle select-none">
                             <input type="checkbox" id="theme-toggle" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
                             <label for="theme-toggle" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"></label>
@@ -83,14 +83,14 @@
                     <div class="w-20 h-1 bg-indigo-600 mx-auto"></div>
                 </div>
                 
-                <div class="flex flex-col md:flex-row items-center mb-16">
+                <div class="flex flex-col md:flex-row items-center mb-16 max-w-5xl mx-auto px-4">
                     <div class="md:w-1/4 mb-10 md:mb-0">
                         <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" alt="Founder" class="rounded-lg shadow-lg max-w-full h-auto floating-img">
                     </div>
                     <div class="md:w-1/2 md:pl-12">
-                        <h3 class="text-2xl font-bold mb-4">Our Founder</h3>
-                        <p class="text-gray-600 mb-6">Jane Doe is a visionary technologist with over 15 years of experience in software development and IT consulting. Her passion for innovation and problem-solving led to the creation of Neurobyte Innovations in 2015.</p>
-                        <p class="text-gray-600 mb-6">Under her leadership, the company has grown from a small startup to a trusted partner for businesses across multiple industries.</p>
+                        <h3 class="text-2xl font-bold mb-4 text-center md:text-left">Our Founder</h3>
+                        <p class="text-gray-600 mb-6 text-center md:text-left">Jane Doe is a visionary technologist with over 15 years of experience in software development and IT consulting. Her passion for innovation and problem-solving led to the creation of Neurobyte Innovations in 2015.</p>
+                        <p class="text-gray-600 mb-6 text-center md:text-left">Under her leadership, the company has grown from a small startup to a trusted partner for businesses across multiple industries.</p>
                         <div class="flex space-x-4">
                             <a href="#" class="text-indigo-600 hover:text-indigo-800"><i class="fab fa-linkedin text-2xl"></i></a>
                             <a href="#" class="text-indigo-600 hover:text-indigo-800"><i class="fab fa-twitter text-2xl"></i></a>
@@ -408,17 +408,17 @@
         </div>
     </footer>
 
-    <!-- Back to Top Button -->
-<!--     <a href="#" id="back-to-top" class="back-to-top bg-indigo-600 text-white w-12 h-12 rounded-full flex items-center justify-center shadow-lg hover:bg-indigo-700 transition duration-300">
+    <!-- Back to Top Button
+    <a href="#" id="back-to-top" class="back-to-top bg-indigo-600 text-white w-12 h-12 rounded-full flex items-center justify-center shadow-lg hover:bg-indigo-700 transition duration-300">
         <i class="fas fa-arrow-up"></i>
     </a> -->
 
- <div class="fixed-contact-buttons flex flex-col space-y-3">
+ <div class="fixed-contact-buttons  flex flex-col space-y-3 flating-icon">
     <!-- Phone Button (No Shadow) -->
     <a href="tel:+11234567890">
         <img src="telephone.jpg" 
              alt="Call Us" 
-             class="w-14 h-14 rounded-full transition duration-300 hover:scale-105">
+             class="w-14 h-14 rounded-full  transition duration-300 hover:scale-105">
     </a>
 
     <!-- WhatsApp Button (With Shadow) -->
