--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" alt="Founder" class="rounded-lg shadow-lg max-w-full h-auto floating-img">
                     </div>
                     <div class="md:w-1/2 md:pl-12">
-                        <h3 class="text-2xl font-bold mb-4 text-center md:text-left">Our Founder</h3>
+                        <h3 class="text-2xl font-bold mb-4">Our Founder</h3>
                         <p class="text-gray-600 mb-6 text-center md:text-left">Jane Doe is a visionary technologist with over 15 years of experience in software development and IT consulting. Her passion for innovation and problem-solving led to the creation of Neurobyte Innovations in 2015.</p>
                         <p class="text-gray-600 mb-6 text-center md:text-left">Under her leadership, the company has grown from a small startup to a trusted partner for businesses across multiple industries.</p>
                         <div class="flex space-x-4">
@@ -319,24 +319,25 @@
                     <div class="lg:w-1/2">
                         <div class="bg-gray-50 p-8 rounded-lg shadow-md">
                             <h3 class="text-2xl font-bold mb-6">Send Us a Message</h3>
-                            <form>
+                            <form id="contact-form" onsubmit="return false;">
                                 <div class="mb-6">
                                     <label for="name" class="block text-gray-700 font-medium mb-2">Your Name</label>
-                                    <input type="text" id="name" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent" placeholder="John Doe">
+                                    <input type="text" id="name" name="name" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent" placeholder="John Doe" required>
                                 </div>
                                 <div class="mb-6">
                                     <label for="email" class="block text-gray-700 font-medium mb-2">Email Address</label>
-                                    <input type="email" id="email" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent" placeholder="john@example.com">
+                                    <input type="email" id="email" name="email" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent" placeholder="john@example.com" required>
                                 </div>
                                 <div class="mb-6">
                                     <label for="subject" class="block text-gray-700 font-medium mb-2">Subject</label>
-                                    <input type="text" id="subject" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent" placeholder="How can we help?">
+                                    <input type="text" id="subject" name="subject" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent" placeholder="How can we help?" required>
                                 </div>
                                 <div class="mb-6">
                                     <label for="message" class="block text-gray-700 font-medium mb-2">Message</label>
-                                    <textarea id="message" rows="5" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent" placeholder="Your message here..."></textarea>
+                                    <textarea id="message" name="message" rows="5" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent" placeholder="Your message here..." required></textarea>
                                 </div>
-                                <button type="submit" class="w-full bg-indigo-600 text-white py-3 px-6 rounded-lg hover:bg-indigo-700 transition duration-300 font-medium">Send Message</button>
+                                <button type="submit" id="submit-button" class="w-full bg-indigo-600 text-white py-3 px-6 rounded-lg hover:bg-indigo-700 transition duration-300 font-medium">Send Message</button>
+                                <div id="form-message" class="mt-4 text-center"></div>
                             </form>
                         </div>
                     </div>
