--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#contact" class="nav-link px-3 py-2 font-medium">Contact</a>
                     <!-- Theme Toggle -->
                     <div class="flex items-center">
-                        <span class="mr-2 text-sm font-medium"><b>Light</b>></span>
+                        <span class="mr-2 text-sm font-medium"><b>Light</b></span>
                         <div class="relative inline-block w-12 mr-2 align-middle select-none">
                             <input type="checkbox" id="theme-toggle" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
                             <label for="theme-toggle" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"></label>
